2010-03-04  vadim  <vadim@vk.crocodile.org>

	* ObjectManipulator.cpp (ObjectManipulator::getDeleteMenuState):
	fixed #1301 "can not delete Policy object when it is in Deleted
	Objects lib". SF bug 2962628

2010-03-03  glitch.vk.crocodile.org  <vadim@vk.crocodile.org>

	* CompilerDriver_pix_run.cpp (CompilerDriver_pix::run): 
	fixed #1296 "crash in fwb_pix". Compiler used to create copy of
	each network zone object, expanded it recursively and added
	network and address objects to the newly created group
	directly (rather than via references). This created objects that
	were referenced by two parents in the tree which caused crash in
	FWObject::destroyChildren() because an attempt to free the same
	block of memory twice.

2010-03-03  vadim  <vadim@vk.crocodile.org>

	* compiler_lib/CompilerDriver.cpp (CompilerDriver::commonChecks2):
	fixed #1292  Added check for interfaces with valid address and
	netmask 0.0.0.0

2010-03-03  glitch.vk.crocodile.org  <vadim@vk.crocodile.org>

	* iptables.g (port_def_with_incomplete_range): fixed #1294
	'importer for iptables does not parse "--dport NNNN:"'. Policy
	importer for iptables should recognize the following variant of
	the --dport and --sport port ranges: "port1", "port1:port2",
	":port1" and "port2:"

2010-03-03  vadim  <vadim@vk.crocodile.org>

	* IPTImporter.cpp (IPTImporter::finalize): fixed #1288 "all rules
	created by policy import have rule number 0"

	* FWWindowPrint.cpp (FWWindow::filePrint): fixed #1295 "File/Print
	does not work for clusters"

	* Importer.cpp (Importer::createAddress): fixed #1287 "policy
	importer (iptables) crashes when host name is used in iptables
	rule in place of an address". Importer now creates DNSName object.

	* fixed #1291 "deleted objects 'policy' problem". SF bug 2962628
	If user ended up placing a 'policy' object in the 'Deleted
	Objects' library, it could not be deleted or opened.
        RuleSetView.cpp
        RuleSetModel.cpp
        ActionsDialog.cpp
        RuleSetDialog.cpp